After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735381 - Abort with latest Glib
Abort with latest Glib
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: ftp backend
1.21.x
Other Linux
: Normal major
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2014-08-25 13:17 UTC by Ross Lagerwall
Modified: 2014-08-29 06:23 UTC
See Also:
GNOME target: 3.14
GNOME version: ---


Attachments
ftp: Don't unlock unlocked mutex (1.29 KB, patch)
2014-08-25 13:22 UTC, Ross Lagerwall
committed Details | Review

Description Ross Lagerwall 2014-08-25 13:17:47 UTC
With the latest GLib's mutex changes, unlocking an unlocked mutex causes an abort(). This is triggered by the ftp backend when a connection has gone stale (see comment 22 of bug 591054 for a test case.
Comment 1 Ross Lagerwall 2014-08-25 13:22:43 UTC
Created attachment 284401 [details] [review]
ftp: Don't unlock unlocked mutex

Don't unlock an unlocked mutex since this causes an abort() with the
latest glib (and is undefined anyway).
Comment 2 Ondrej Holy 2014-08-28 14:30:37 UTC
Review of attachment 284401 [details] [review]:

Looks good, thanks!
Comment 3 Ross Lagerwall 2014-08-29 06:23:48 UTC
Pushed to master as 2153d300f24d3388d7c4ab75a55451ad5a581b5a. Thanks for the review!