ftp: Don't unlock unlocked mutex

Don't unlock an unlocked mutex since this causes an abort() with the
latest glib (and is undefined anyway).

https://bugzilla.gnome.org/show_bug.cgi?id=735381